--- a/app/templates/authors/exo_edit_content.html
+++ b/app/templates/authors/exo_edit_content.html
@@ -41,34 +41,11 @@
 
 {% macro form_field2(field) -%}
     {% set with_label = kwargs.pop('with_label', True) %}
-    {% set placeholder = '' %}
-    {% if not with_label %}
-        {% set placeholder = field.label.text %}
-    {% endif %}
     <div class="form-group {% if field.errors %}error{% endif %}">
-        {% if with_label %}
-            <label for="{{ field.id }}" class="col-lg-2 control-label">
-                {{ field.label.text }}:
-            </label>
-        {% endif %}
-        <div class="col-lg-8">
-            {% set class_ = kwargs.pop('class_', '') %}
-            {% if field.flags.required %}
-                {% set class_ = class_ + ' required' %}
-            {% endif %}
-            {% if field.type == 'BooleanField' %}
-                <label class="checkbox">
-                    {{ field(class_=class_ + ' form-control', **kwargs) }}
-                    {{ field.label.text|safe }}
-                </label>
-            {% else %}
-                {% if field.type in ('TextField', 'TextAreaField', 'PasswordField') %}
-                    {% set class_ = class_ + ' form-control' %}
-                {% elif field.type == 'FileField' %}
-                    {% set class_ = class_ + ' form-control' %}
-                {% endif %}
-                {{ field(class_=class_ + ' form-control', placeholder=placeholder, **kwargs) }}
-            {% endif %}
+        <div class="col-md-12">
+            {% set class_ = kwargs.pop('class_', '') + ' form-control'%}
+
+            {{ field(class_=class_, **kwargs) }}
             {% if field.errors %}
                 <span class="error help-inline">{{ field.errors|join(', ') }}</span>
             {% endif %}
@@ -244,7 +221,7 @@
 
 
 <div class="row">
-  <div class="col-md-12">
+  <div class="col-sm-12">
     <h2>Contenu </h2>
 
     <div class="jumbotron" id="question">
@@ -252,11 +229,9 @@
       <div class="math">{{exo_data.question_html |safe}}</div>
       <div id="edit_enonce" class="collapse">
         <hr>
-
           {{form.hidden_tag()}}
           <div style="display:none;">{{form.question.process_data(exo_data.question)}}</div>
-
-          {{form_field(form.question, class="form-control", rows="10")}}
+          {{form_field2(form.question, rows="10")}}
           <input class="btn btn-danger" type="submit" value="Enregistrer">
       </div>
     </div>
@@ -266,11 +241,10 @@
       <div class="math">{{exo_data.hint |safe}}</div>
       <div id="edit_hint" class="collapse">
         <hr>
-
           {{form.hidden_tag()}}
           <!-- prefill textarea: -->
           <div style="display:none;">{{form.hint.process_data(exo_data.hint)}}</div>
-          {{form_field(form.hint, class="form-control", rows="3")}}
+          {{form_field2(form.hint, rows="3")}}
           <input class="btn btn-danger" type="submit" value="Enregistrer">
       </div>
     </div>
@@ -280,13 +254,11 @@
       <div class="math">{{exo_data.solution_html |safe}}</div>
       <div id="edit_solution" class="collapse">
         <hr>
-
           {{form.hidden_tag()}}
-
           <!-- prefill textarea: -->
           <div style="display:none;">{{form.solution.process_data(exo_data.solution) }}</div>
 
-          {{form_field(form.solution, class="form-control", rows="20")}}
+          {{form_field2(form.solution, rows="20")}}
            <input class="btn btn-danger" type="submit" value="Enregistrer">
 
         </div>
