--- a/app/templates/authors/index.html
+++ b/app/templates/authors/index.html
@@ -8,7 +8,7 @@
 
     <h3>Mes statistiques :</h3>
     <p>Nombre d'exercices entrés: {{nbexos}}</p>
-    <p><a href={{ url_for('authors_flags_to_process')}}>Nombre de flags traités</a>: {{nbFlagsToProcess}} / {{nbFlagsTotal}} ({{proportionFlagsToProcess}}%) </p>
+    <p><a href={{ url_for('authors_flags_to_process')}}>Nombre de flags à traiter</a>: {{nbFlagsToProcess}} / {{nbFlagsTotal}} ({{proportionFlagsToProcess}}%) </p>
   </div>
 </div>
 
